n#759210: Certain smartart drawings weren't imported.

SmartArt info was reset, when there was a chart (e.g.)
in the same slide.

This also fixes fdo#50907.

(cherry picked from commit 11c5699dad06fb0d7fc0e458550a1dac82f8ee5f)

Signed-off-by: Petr Mladek <pmladek@suse.cz>